--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-SQLAlchemy==2.0.4
+
 pandas>=1.5.2
 pyarrow>=5.0.0
-pydash==5.0.2
 pydantic>=1.10.2
-psycopg2==2.9.3
 cachetools==4.2.2
 cryptomarketdata
+
+#SQLAlchemy==2.0.4
+#pydash==5.0.2
+#psycopg2==2.9.3
