--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,8 +1,8 @@
 package:
-  name: "cryptomarketdata"
-  version: '0.1.1'
+  name: "crypto_feature_preprocess"
+  version: '0.1.0'
 about:
-  summary: "This is crypto market data operation Python library"
+  summary: "This is crypto preprocess feature Python library"
 source:
   path: ..
 requirements:
@@ -21,4 +21,6 @@ requirements:
     - pydantic>=1.10.2
     - psycopg2==2.9.3
     - cachetools==4.2.2
+    - s3fs>=2023.3.0
     - cryptomarketdata
+    
