--- a/requirements_jupyter.txt
+++ b/requirements_jupyter.txt
@@ -6,11 +6,11 @@
 #jupyterlab
 
 ipython
-jupyterlab=3
+jupyterlab
 nb_conda_kernels 
 black 
 isort
 jupyterlab_code_formatter
 ipywidgets 
-plotly==5.5.0
+plotly
 matplotlib
