--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,13 +14,13 @@ requirements:
     - setuptools
   run:
     - python
-    - SQLAlchemy==2.0.4
     - pandas>=1.5.2
     - pyarrow>=5.0.0
-    - pydash==5.0.2
     - pydantic>=1.10.2
-    - psycopg2==2.9.3
     - cachetools==4.2.2
     - s3fs>=2023.3.0
     - cryptomarketdata
+    #- SQLAlchemy==2.0.4
+    #- pydash==5.0.2
+    #- psycopg2==2.9.3
     
